--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,30 +1,65 @@
-<html>
+<!doctype html>
+<html data-bs-theme="light">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Transcript</title>
 
+    <link rel="stylesheet" href="/static/css/main.css" />
+
+    <!-- Bootstrap CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+
+    <!-- jQuery -->
+    <script src="/static/js/jquery-3.7.0.min.js"></script>
+
+    <!--Dynamically load HTML components. -->
+    <script src="/static/js/html_loader.js"></script>
+
+    <!-- Prevent form resubmission on page refresh. -->
+    <script src="/static/js/form_resubmit.js"></script>
 </head>
 
+
 <body>
-    <h1>Transcript</h1>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+        crossorigin="anonymous"></script>
 
-    <h2>Input</h1>
+    <!-- Show the navigation bar -->
+    <div data-include="navbar"></div>
 
-        <form id="upload-form" action="/transcribe" method="post" enctype="multipart/form-data">
-            <input type="file" id="audio-input" name="audio_file" accept=".wav" />
-        </form>
+    <div class="container-fluid">
+        <br>
+        <div class="main-io row row-cols-auto align-middle">
+            <div class="col col-md-3 ">
+                <h2>Input</h2>
 
-        <h2>Output</h2>
+                <form id="upload-form" action="/transcribe" method="post" enctype="multipart/form-data">
+                    <input type="file" id="audio-input" name="audio_file" accept=".wav" />
+                </form>
+            </div>
+            <div class="col col-md-9">
+                <h2>Output</h2>
 
-        <div>
-            {{ transcript_results }}
+                <div>
+                    {{ transcript }}
+                </div>
+            </div>
         </div>
 
-        <script>
-            document.getElementById("audio-input").onchange = function () {
-                document.getElementById("upload-form").submit();
-                console.log("Uploaded")
-            };
-        </script>
+    </div>
+
+    <div data-include="footer"></div>
+
+    <script>
+        document.getElementById("audio-input").onchange = function () {
+            document.getElementById("upload-form").submit();
+            console.log("Uploaded")
+        };
+    </script>
 </body>
 
 </html>
