--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -24,10 +24,22 @@ body {
     /* cross-browser */
 }
 
+#editor {
+    height: auto;
+}
+
+.soundwave {
+    background-color: gainsboro;
+    position: sticky;
+    bottom: 0;
+}
+
 /* Footer */
 footer {
     overflow: hidden;
-    padding: 20px 10px;
-    margin-top: 25px;
+    padding-bottom: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
     color: white;
+
 }
